--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body.menu-open {
 
 /* ================= HEADER & NAVIGATION ================= */
 header {
-    position: sticky;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
